--- a/.gitignore
+++ b/.gitignore
@@ -8,6 +8,8 @@ npm-debug.log
 yarn-error.log
 .env
 composer.lock
-package.lock
+package-lock.json
 .DS_Store
 /.nuxt
+public/assets/js
+public/assets/css
