--- a/package.json
+++ b/package.json
@@ -9,7 +9,10 @@
   "author": "",
   "license": "ISC",
   "dependencies": {
-    "vue": "^2.5.17"
+    "install": "^0.12.1",
+    "npm": "^6.4.0",
+    "vue": "^2.5.17",
+    "vuex": "^3.0.1"
   },
   "devDependencies": {
     "autoprefixer": "^9.1.1",
